examples/negative/modules/theory_builtin_user.kai
# Negative fixture: a `builtin` theory names an engine that is the
# compiler core itself (HM, effect rows). Only the language's kind
# catalog declares those; a user `theory X = builtin` is a hard error
# with a dedicated diagnostic (not the generic catalog-only one).

theory Mine = builtin

fn main() : Int = 0
